<resources>
    <string name="app_name">TiendaEcci</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">No tienes una cuenta?</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="login">Iniciar Sesión</string>
    <string name="already_have_account1">¿Ya tienes una cuenta? Inicia sesión aquí</string>
    <string name="action_settings">Configuración</string>
    <string name="back_button">Botón de regreso</string>
    <string name="category_image">Imagen de la categoría</string>

</resources>

